[shim] Implement Future API
Part-of: https://github.com/dstackai/dstack/issues/1780
